--- a/css/pages/books.css
+++ b/css/pages/books.css
@@ -31,9 +31,6 @@
   width: 95%;
   margin: auto;
   aspect-ratio: 1/1.5;
-  background-size: fill;
-  background-position: center;
-  background-repeat: no-repeat;
   margin-bottom: 1rem;
 }
 
@@ -43,9 +40,8 @@
   object-position: center;
   object-fit: cover;
   border-radius: 1rem;
-  opacity: 0;
-  transition: opacity 1s ease;
 }
+
 .paginations {
   display: flex;
   flex-direction: row;
